<resources>
    <string name="app_name">TrojanBooks</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="no_results">No Results Found</string>
    <string name="next">Next</string>

    <string name="text_title">Title: </string>
    <string name="text_price">Estimated Price: </string>
    <string name="text_ISBN">ISBN: </string>
    <string name="text_Author">Authors: </string>
    <string name="button_finish"> Finish </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="search_string">Search by book name, class code, ISBN</string>

    <string name="text_transaction_type">Transaction Type: </string>
    <string name="text_contact_info">Contact Info: </string>
    <string name="text_list_price">Price: </string>

    <string name="save_button"> Save </string>
    <string name = "delete_button"> DELETE </string>

    <string name="prompt_text"> Search for book through book name, ISBN or author to make a post </string>
    <string name="prompt_text2"> Search for listing through book name, ISBN or author </string>
    <string name="SignOutText"> Sign Out</string>

    <string name="buyingButton">Buying</string>
    <string name="sellingButton">Selling</string>
    <string name="deleteButton">Delete</string>

    <string name="postButton">Post</string>
</resources>
