<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="135dp"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textBookName"
            android:text="@string/text_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textPrice"
            android:text="@string/text_price"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textISBN"
            android:text="@string/text_ISBN"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textAuthor"
            android:text="@string/text_Author"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_list_price"
            android:text="@string/text_list_price"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_transaction_type"
            android:text="@string/text_transaction_type"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_contact_info"
            android:text="@string/text_contact_info"/>

    </LinearLayout>

</LinearLayout>