<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/marginpadding"
    >

  <ImageView
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:id="@+id/imageView" />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="80dp"
      android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textBookName"
          android:text="@string/text_title"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textPrice"
          android:text="@string/text_price"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textISBN"
          android:text="@string/text_ISBN"/>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textAuthor"
          android:text="@string/text_Author"/>

  </LinearLayout>

</LinearLayout>