<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.cherukuri.nikhil.trojanbooks.EditListingActivity"
    android:layout_centerHorizontal="true">



    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/details_imageview"
        android:layout_below="@id/tabHost"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_imageview"
        android:layout_centerHorizontal="true"
        android:id="@+id/detailsBookName"
        android:hint="Book Name"
        android:editable="false"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsBookName"
        android:layout_centerHorizontal="true"
        android:id="@+id/detailsAuthorName"
        android:hint="Author Name"
        android:editable="false"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsAuthorName"
        android:layout_centerHorizontal="true"
        android:id="@+id/detailsISBN"
        android:hint="ISBN"
        android:editable="false"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsISBN"
        android:layout_centerHorizontal="true"
        android:id="@+id/detailsGooglePrice"
        android:hint="Price on Google"
        android:editable="false"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsGooglePrice"
        android:layout_centerHorizontal="true"
        android:id="@+id/detailsListPrice"
        android:inputType="number"
        android:hint="List Price (USD):"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsListPrice"
        android:layout_centerHorizontal="true"
        android:id="@+id/classCode"
        android:hint="Enter classes (Math 245, Math 225, etc.)"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/radioGroup"
        android:id="@+id/buttonFinish"
        android:text="@string/save_button"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/classCode"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sellingButton"
            android:layout_weight="1"
            android:id="@+id/sellingButton"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buyingButton"
            android:layout_weight="1"
            android:id="@+id/buyingButton"/>

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFinish"
        android:text="@string/delete_button"
        android:background="@color/cardinal"
        android:id="@+id/deleteButton"/>

</RelativeLayout>